--- a/component-web/src/main/webapp/WEB-INF/pages/index.html
+++ b/component-web/src/main/webapp/WEB-INF/pages/index.html
@@ -22,7 +22,7 @@
   <body>
 	<div class="container">
 		
-		<h3>首页</h3>
+		<h3>首页-微信第三方开放平台</h3>
 	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
